<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="118dp"
    android:layout_marginStart="10dp"
    android:layout_marginTop="5dp"
    android:layout_marginEnd="10dp"
    android:backgroundTint="@color/faded_black"
    app:cardElevation="6dp">

    <LinearLayout
        android:id="@+id/email_linear_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="16dp">

        <TextView
            android:id="@+id/text_sender_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginLeft="15dp"
            android:text="@string/monkey_d_luffy"
            android:textColor="@color/orange_header"
            android:textSize="25sp"
            android:textStyle="bold"
            tools:ignore="RtlHardcoded" />

        <TextView
            android:id="@+id/text_email_subject"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginLeft="15dp"
            android:maxLength="36"
            android:text="@string/application_for_react_native_developer_"
            android:textColor="@color/white_grey"
            android:textSize="18sp"
            tools:ignore="RtlHardcoded" />

        <TextView
            android:id="@+id/text_email_content_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginLeft="14dp"
            android:layout_marginTop="2dp"
            android:maxLength="50"
            android:text="@string/lorem_ipsum_dolor_sit_amet_consectetur_adipiscing_elit_sed_do_eiusmod_tempor_incididunt_ut_labore_et_dolore_magna_aliqua_ut_eni_"
            android:textColor="@color/white_grey"
            android:textSize="15sp"
            tools:ignore="RtlHardcoded" />

    </LinearLayout>

</androidx.cardview.widget.CardView>